fix dropdown cutoff / wrap issues

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -447,6 +447,9 @@ pre {
       flex-wrap: nowrap;
       .date-dropdown {
         text-align: right;
+        .dropdown-toggle {
+          white-space: normal;
+        }
         @media (max-width: 750px) {
           font-size: 12px;
           max-width: 140px;
@@ -463,7 +466,9 @@ pre {
     }
     &.pinned {
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
+      .header-tabs {
+        overflow: hidden;
+      }
     }
   }
 }
